# dust_attenuation

./: .readthedocs.yml  .rtd-environment.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/dust_attenuation/: attenuation.rst  choose_model.rst  fit_attenuation.rst  index.rst  install.rst  model_flavors.rst  references.rst
dust_attenuation/: C00.py  S07.py  WG00.py  __init__.py  averages.py  base_classes.py  baseclasses.py  dust_attenuation.py  helpers.py  radiative_transfer.py  shapes.py
dust_attenuation/data/WG00/: __init__.py  cloudy.txt  dusty.txt  shell.txt
dust_attenuation/tests/: helpers.py  test_L02.py  test_N09.py  test_N09mod.py  test_Noll09.py  test_SBL18.py  test_WG00.py  test_c00.py  test_leitherer02.py
dust_attenuation/widgets/: WG00_widget.py
licenses/: LICENSE.rst
notebooks/: C00.ipynb  Test_tabular_model.ipynb  Untitled.ipynb  WG00-Copy1.ipynb  WG00_test.ipynb
widgets/: WG00_widget.py
