[metadata]
name = dust_attenuation
author = Karl Gordon & David Corre
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://dust-attenuation.readthedocs.io/
description = Astronomical dust attenuation models
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = karllark/dust_attenuation

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    matplotlib


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
dust_attenuation = data/WG00/*.txt

[tool:pytest]
testpaths = "dust_attenuation" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    dust_attenuation/docs/_build/*
    dust_attenuation/docs/api/*

[coverage:run]
omit =
    dust_attenuation/_astropy_init*
    dust_attenuation/conftest.py
    dust_attenuation/*setup_package*
    dust_attenuation/tests/*
    dust_attenuation/*/tests/*
    dust_attenuation/extern/*
    dust_attenuation/version*
    */dust_attenuation/_astropy_init*
    */dust_attenuation/conftest.py
    */dust_attenuation/*setup_package*
    */dust_attenuation/tests/*
    */dust_attenuation/*/tests/*
    */dust_attenuation/extern/*
    */dust_attenuation/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
